fix: wide on mobile (#41)

--- a/src/components/ConcertCard/concertCard.scss
+++ b/src/components/ConcertCard/concertCard.scss
@@ -62,7 +62,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) {
   .concert-card {
     grid-template-areas: "image body body location";
     grid-template-columns: 1fr 2fr 2fr 2fr;
@@ -73,9 +73,6 @@
       .card-title {
         font-size: 2.5rem;
       }
-    }
-
-    .concert-card-location {
     }
   }
 }
